FCC - Technical Documentation
screenshot of FCC - Technical Documentation project for thumbnail

--- a/Personal_Portfolio_Page/index.html
+++ b/Personal_Portfolio_Page/index.html
@@ -56,8 +56,8 @@
     </div>
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="img_forest.jpg">
-          <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+        <a target="_blank" href="https://codepen.io/shishir-kedlaya/full/RwNBQpP">
+          <img src="https://screenshot.codepen.io/4000022.RwNBQpP.b17ef742-6c88-4feb-a859-b6ea68b66c87.png" alt="Forest" width="300" height="200">
         </a>
         <div class="desc">Add a description of the image here</div>
       </div>
