Changed and simplified layout of the index page.

--- a/Personal_Portfolio_Page/index.html
+++ b/Personal_Portfolio_Page/index.html
@@ -48,36 +48,34 @@
   <div class="wrapper" id="projects">
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="img_5terre.jpg">
-          <img src="img_5terre.jpg" alt="Cinque Terre" width="600" height="400">
-        </a>
-        <div class="desc">Add a description of the image here</div>
-      </div>
-    </div>
-    <div class="responsive">
-      <div class="gallery">
         <a target="_blank" href="https://codepen.io/shishir-kedlaya/full/RwNBQpP">
-          <img src="https://screenshot.codepen.io/4000022.RwNBQpP.b17ef742-6c88-4feb-a859-b6ea68b66c87.png" alt="Forest" width="300" height="200">
+          <img src="https://github.com/shishir-kedlaya/FCC/raw/Personal_Portfolio_Page/Personal_Portfolio_Page/images/FCC_-_Tribute_Page.png" alt="Forest" width="300" height="200">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">FCC - Tribute Page</div>
       </div>
     </div>
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="img_forest.jpg">
-          <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+        <a target="_blank" href="https://codepen.io/shishir-kedlaya/full/NWPLRWJ">
+          <img src="https://github.com/shishir-kedlaya/FCC/raw/Personal_Portfolio_Page/Personal_Portfolio_Page/images/FCC_-_Survey_Form.png" alt="Forest" width="300" height="200">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">FCC - Survey Form</div>
       </div>
     </div>
-    
-    
     <div class="responsive">
       <div class="gallery">
-        <a target="_blank" href="img_forest.jpg">
-          <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+        <a target="_blank" href="https://codepen.io/shishir-kedlaya/full/RwWRaBJ">
+          <img src="https://raw.githubusercontent.com/shishir-kedlaya/FCC/Personal_Portfolio_Page/Personal_Portfolio_Page/images/FCC_-_Technical_Documentation.png" alt="Forest" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">FCC - Technical Documentation</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="gallery">
+        <a target="_blank" href="https://codepen.io/shishir-kedlaya/full/zYxMzpe">
+          <img src="https://github.com/shishir-kedlaya/FCC/raw/Personal_Portfolio_Page/Personal_Portfolio_Page/images/FCC_-_Product_Landing_Page.png" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">FCC - Product Landing Page</div>
       </div>
     </div>
     <div class="clearfix"></div>
