--- a/Tribute_Page/index.html
+++ b/Tribute_Page/index.html
@@ -1,3 +1,6 @@
+<header id="header">
+<link rel="stylesheet" href="style.css">
+</header>
 <main id="main">
   <h1 class="black-text" id="title"> Sir Alex Ferguson</h1>
   <h2 class="black-text">Football, bloody hell!</h2>
